# HighSchoolOfSB

./: .gitignore  .gitignore.txt  .gitmodules  README.md
ASD1/Lesson 10/: PowerSet.py
ASD1/Lesson 11/: TestBloomFilter.py
ASD1/Lesson 12/: TestNativeCache.py
ASD1/Lesson 4/: postfix.py
ASD1/Lesson 5/: Rotate.py
ASD1/Lesson 6/: Palindrome.py
ASD1/Lesson 7/: TestOrderedList.py
ASD1/Lesson 8/: HashTable.py  TestHashTable.py
Algorithms/: EMPTY.md
HardWork/Lesson2/StringSorter/: CMakeLists.txt  main.cpp  sorter.cpp  sorter.h  sortertests.h
HardWork/Lesson2/StringSorter/tests/: CMakeCache.txt  qtcsettings.cmake
HardWork/Lesson3/app/HW3/: CMakeLists.txt  main.cpp  taskmanager.cpp  taskmanager.h  taskmanager_tests.h
Lesson 1/: LinkedList.py  остатки.txt
Lesson 2/: test_LinkedList2.py
Lesson 4/: StringExecutor.py  test_Stack.py
Lesson 5/: QueueTwoStacks.py
Lesson 9/: TestNativeDictionary.py
OOAP-1/: BloomFilter.h  BoundedStack.h  Deque.h  DynArray.h  HashTable.h  LinkedList.h  NativeDictionary.h  PowerSet.h  Queue.h  TwoWayList.h
OOAP-2/: task10.h  task11.cpp  task12.cpp  task13.h  task16.h  task17.md  task3.md  task3.txt  task4.md  task5.md  task6.md  task8.h  task_01.h  task_02.h  task_07.h  task_09.h  task_11.cpp  task_14.h  task_15.h  task_18.md  task_19.md  task_20.h  task_21.h  task_22.md  task_23.md  task_24.md
OOAP-3/: task_01.md  task_02.md  task_03.md  task_04.md  task_05.md  task_06.md  task_07.md  task_08.md  task_09.md  task_10
OOAP-3/Project/ThreeInARow/: CMakeLists.txt  README.md  main.cpp
OOAP-3/Project/ThreeInARow/Bonus/: bombbonus.cpp  bombbonus.h  bonus.h  bonusset.cpp  bonusset.h  lineclearbonus.cpp  lineclearbonus.h
OOAP-3/Project/ThreeInARow/Errors/: error.h  errorshistory.cpp  errorshistory.h  invalidmoveerror.cpp  invalidmoveerror.h  outofboundserror.cpp  outofboundserror.h
OOAP-3/Project/ThreeInARow/Field/: cell.cpp  cell.h  coordinates.cpp  coordinates.h  gamefield.cpp  gamefield.h  generator.cpp  generator.h
OOAP-3/Project/ThreeInARow/Game/: combination.cpp  combination.h  game.cpp  game.h  gamelogic.cpp  gamelogic.h  step.cpp  step.h
OOAP-3/Project/ThreeInARow/Statistics/: statistic.cpp  statistic.h  stephistory.cpp  stephistory.h
OOAP-3/Project/ThreeInARow/UserInterface/: user.cpp  user.h  userinterface.cpp  userinterface.h
(+114 files in other folders)
